# iTaK-Agent-Framework

./: .gitignore  .gitmodules  PULL_REQUEST_SUMMARY.md  README.md  SETUP.md  add_init_function.py  add_wizards.py  chat_20260120_233614.md  fix_repl.py  fix_repl_v2.py  fix_verbose.py  fix_wizard.py  integrate_guild.py  package-lock.json  package.json  pyproject-old.toml  pyproject.toml  start.py  system_health_report.json  test_guild_minimal.py  test_telemetry.py  test_telemetry_connection.py
.agent/skills/agent-browser/: SKILL.md
.github/workflows/: electron-build.yml
apps/electron/: PR_NOTES.md  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
apps/electron/assets/: icon-placeholder.txt  icon.png.txt
apps/electron/scripts/: check-parent-build.js  installer.nsh  postinstall.sh
apps/electron/src/: electron-adapter.ts  main.ts  preload.ts
docker/api-gateway/: docker-compose.yml  frpc.toml
docker/telemetry/: docker-compose.yml  otel-config.yaml
docs/: ELECTRON_APP.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  VPS_SETUP.md
model_test_results/: test_results.md
scripts/: deepseek_vl2.py  postinstall.js
src/itak/: __init__.py  context.py  crew.py  lite_agent.py  lite_agent_output.py  llm.py  mypy.py  task.py
src/itak/a2a/: __init__.py  config.py  task_helpers.py  types.py  wrapper.py
src/itak/agent/: __init__.py  core.py  utils.py
src/itak/agents/: __init__.py  constants.py  crew_agent_executor.py  parser.py  tools_handler.py
src/itak/cli/: add_crew_to_flow.py  agent_manager.py  api_manager.py  auto_setup.py  banner.py  chat_manager.py  (+26 more)
tests/: test_ripgrep.py  test_smart_edit.py
tools/: __init__.py  generate_tool_specs.py  seo_analyzer.py  stacked_diffs.py  vision_analysis.py
tools/adapters/: crewai_rag_adapter.py  enterprise_adapter.py  lancedb_adapter.py  mcp_adapter.py  rag_adapter.py  tool_collection.py  zapier_adapter.py
tools/aws/: __init__.py
tools/rag/: __init__.py  base_loader.py  core.py  data_types.py  embedding_service.py  source_content.py
tools/tools/: __init__.py
users/docs/: system_profile.json
(+554 files in other folders)
