[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itak"
version = "0.1.0"
description = "iTaK Agent Framework - Intelligent Task Automation Kernel"
readme = "README.md"
license = "MIT"
authors = [
    { name = "David Patton" }
]
requires-python = ">=3.10,<3.14"
keywords = ["ai", "agents", "automation", "multi-agent", "llm", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "chromadb>=0.4.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
tools = [
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
]
studio = [
    "streamlit>=1.28.0",
    "markdown>=3.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "crewai-tools>=0.4.0",
    "sqlalchemy>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
itak = "itak.cli.cli:main"
itak-setup = "itak.cli.post_install:post_install_launch"

[project.urls]
Homepage = "https://github.com/David2024patton/iTaK-Agent-Framework"
Documentation = "https://github.com/David2024patton/iTaK-Agent-Framework#readme"
Repository = "https://github.com/David2024patton/iTaK-Agent-Framework"

[tool.hatch.build.targets.wheel]
packages = ["src/itak"]

[tool.hatch.build.targets.wheel.sources]
"tools" = "itak_tools"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
